imprimantes Les vues des interfaces Facture pour impression et debut dashboard

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -25,3 +25,8 @@ couture_client:
 app:
     resource: @AppBundle/Controller/
     type:     annotation
+    
+
+dashboard:
+    path: /dashboard
+    defaults: { _controller:CoutureTailleurBundle:Tailleur:dashboard }
