Licence & A propos OK Les deux pages sont OK

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -48,7 +48,7 @@ security:
                 provider: fos_userbundle
                 csrf_provider: form.csrf_provider
                 login_path:     /login
-                default_target_path: client
+                default_target_path: vitrineIndex
             logout:
                 path: fos_user_security_logout
                 #target: /login
