--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -52,9 +52,19 @@ app:
     
 
 vitrineIndex:
-    path: /vitrine-index
+    path: /
     defaults: { _controller:CoutureCoutureBundle:Modele:vitrine }
     
+licence:
+    path: /licence
+    defaults: { _controller:CoutureVitrineBundle:Vitrine:licence }
+    
+
+a_propos:
+    path: /a-propos
+    defaults: { _controller:CoutureVitrineBundle:Vitrine:apropos }
+
+
 
     
 dashboard:
