--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -37,6 +37,7 @@ security:
                 failure_path:   null
             logout:
                 path:           /admin/logout
+                target:         /login
             anonymous:    true
         # -> end custom configuration
         
