Gvchart intégré ecriture de la route, methode genererAction pour les factures, il reste à préremplir le formulaire de création d'une facture. pour gvchart, il reste à réecrire les requetes pour avoir le nombre de couture par mois et faire les classement par année.

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -49,7 +49,7 @@ security:
                 provider: fos_userbundle
                 csrf_provider: form.csrf_provider
                 login_path:     /login
-                default_target_path: vitrineIndex
+                default_target_path: dashboard
             logout:
                 path: fos_user_security_logout
                 #target: /login
